--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>JONATHAN "Johnnie" SYKES</h1>
   <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img src="https://tenor.com/view/praise-the-lord-hallelujah-gif-24711853" />
 </body>
  
 </html>
