--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
  
 <body>
   <h1>JONATHAN "Johnnie" SYKES</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://tenor.com/view/praise-the-lord-hallelujah-gif-24711853" />
+  <p>Welcome to my website! God is so good!</p>
+  <img src="https://tenor.com/bPQQr.gif" />
 </body>
  
 </html>
